[AI-Implementation] Add equipped items, match history, team overview stats, and MatchResult enum